--- a/NGO info.html
+++ b/NGO info.html
@@ -16,9 +16,9 @@
             <ul>
                 <li><a href="./index.html" class="active"> home </a></li>
                 <li><a href="./trainee-profile.html"> profile </a></li>
-                <li><a href="./signup.html"> Sign up </a></li>
-                <li><a href="./login.html"> login </a></li>
-                <li><a href="./register.html"> logout </a></li>
+                <li><a href="./signup/index.html"> Sign up </a></li>
+                <li><a href="./login/index.html"> login </a></li>
+                <li><a href="./login/index.html"> logout </a></li>
             </ul>
         </div>
         <!-- ================== -->
@@ -31,7 +31,7 @@
                 <a href="./signup.html"> Sign up </a> |
                 <a href="./login.html"> login </a>
             </div>
-            <div class="logout"><a href="./register.html"> logout </a></div>
+            <div class="logout"><a href="./login/index.html"> logout </a></div>
         </div>
         <!-- ============================= -->
         <div class="searchBox">
