--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
                 <ul>
                     <li><a href="./index.html" class="active"> home </a></li>
                     <li><a href="./trainee-profile.html"> profile </a></li>
-                    <li><a href="./signup.html"> Sign up </a></li>
-                    <li><a href="./login.html"> login </a></li>
-                    <li><a href="./register.html"> logout </a></li>
+                    <li><a href="./singnup/index.html"> Sign up </a></li>
+                    <li><a href="./login/index.html"> login </a></li>
+                    <li><a href="./login/index.html"> logout </a></li>
                 </ul>
             </div>
             <!-- ================== -->
@@ -30,10 +30,10 @@
                     <li><a href="./trainee-profile.html"> profile </a></li>
                 </ul>
                 <div class="regLogin">
-                    <a href="./signup.html"> Sign up </a> |
-                    <a href="./login.html"> login </a>
+                    <a href="./signup/index.html"> Sign up </a> |
+                    <a href="./login/index.html"> login </a>
                 </div>
-                <div class="logout"><a href="./register.html"> logout </a></div>
+                <div class="logout"><a href="./login/index.html"> logout </a></div>
             </div>
             <!-- ============================= -->
             <div class="searchBox">
