--- a/trainer.html
+++ b/trainer.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="./style.CSS">
-    <title>M O A I A D</title>
+    <title>Trainer</title>
 </head>
 
 <body>
@@ -16,9 +16,9 @@
             <ul>
                 <li><a href="./index.html" class="active"> home </a></li>
                 <li><a href="./trainee-profile.html"> profile </a></li>
-                <li><a href="./signup.html"> Sign up </a></li>
-                <li><a href="./login.html"> login </a></li>
-                <li><a href="./register.html"> logout </a></li>
+                <li><a href="./signup/index.html"> Sign up </a></li>
+                <li><a href="./login/index.html"> login </a></li>
+                <li><a href="./login/index.html"> logout </a></li>
             </ul>
         </div>
         <!-- ================== -->
@@ -31,7 +31,7 @@
                 <a href="./signup.html"> Sign up </a> |
                 <a href="./login.html"> login </a>
             </div>
-            <div class="logout"><a href="./register.html"> logout </a></div>
+            <div class="logout"><a href="./login/index.html"> logout </a></div>
         </div>
         <!-- ============================= -->
         <div class="searchBox">
