--- a/about_course.html
+++ b/about_course.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./style.CSS">
+    <link rel="stylesheet" href="./css/style.css">
     <title>NGO Courses</title>
 </head>
 
@@ -85,7 +85,7 @@
         <div> All rights reserved. 2019</div>
     </footer>
     <!-- =================================== script =============================================== -->
-    <script src="./courseAbout.js" type="module"></script>
+    <script src="./js/courseAbout.js" type="module"></script>
 </body>
 
 </html>
