--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/register.css">
     <title>sign up</title>
 </head>
 <body>
@@ -35,7 +35,6 @@
                 <i class="fas fa-exclamation-circle"></i>
                 <small>Error message</small>
             </div>
-
             <div class="form-control">
                 <label for="username">Email</label>
                 <input type="email" placeholder="a@florin-pop.com" id="email" />
@@ -62,5 +61,5 @@
     </div>
     
 </body>
-<script src="main.js"></script>
+<script src="./js/register.js"></script>
 </html>
