--- a/trainer.html
+++ b/trainer.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./style.CSS">
+    <link rel="stylesheet" href="./css/style.css">
     <title>M O A I A D</title>
 </head>
 
@@ -69,7 +69,7 @@
         <div> All rights reserved. 2019</div>
     </footer>
     <!-- =================================== script =============================================== -->
-    <script src="./main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
