--- a/NGO info.html
+++ b/NGO info.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./style.CSS">
+    <link rel="stylesheet" href="./css/style.css">
     <title>CHAMS.NGO</title>
 </head>
 
 <body>
     <nav>
-        <span class="menu-show" onclick="toggleMenu()">&#9776</span>
+        <span class="menu-show" id="showMenu">&#9776</span>
         <div class="menu-list" id="menu-list">
             <ul>
                 <li><a href="./index.html" class="active"> home </a></li>
@@ -63,11 +63,11 @@
     </figure>
     <!-- =================================== footer =============================================== -->
 
-    <footer>
-        <div> All rights reserved. 2019</div>
+    <footer class="footer">
+        <div class="footer-content"> All rights reserved. 2019</div>
     </footer>
     <!-- =================================== script =============================================== -->
-    <script src="./main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
