--- a/Show courses.html
+++ b/Show courses.html
@@ -29,43 +29,49 @@
     </header>
     <figure>
         <div class="image">
-           <img src="./images/person.png" alt="Trainer pic" title="Trainer" width="240px" height="240px" >
+            <img src="./images/person.png" alt="Trainer pic" title="Trainer" width="240px" height="240px">
 
         </div>
         <div class="content">
             <br>
-            <img src="iconfinder_edit.png" class="editicon" onclick="change_value()" >
+            <img src="iconfinder_edit.png" class="editicon" onclick="change_value()">
             <form class="kWXsT" method="POST">
                 <div class="eE-OA">
-                   <label for="pepName">Full name </label>
-                    <div class="ada5V"><input aria-required="false" value="1" readonly id="pepName" type="text" class="input"
-                            value=""></div>
+                    <label for="pepName">Full name </label>
+                    <div class="ada5V"><input aria-required="false" value="1" readonly id="pepName" type="text"
+                            class="input" value=""></div>
                 </div>
                 <div class="eE-OA">
-                   <label for="pepUsername">Email</label>
+                    <label for="pepUsername">Email</label>
                     <div class="ada5V"><input aria-required="true" value="2" readonly type="text" class="input"
                             value=""></div>
                 </div>
                 <div class="eE-OA">
-                        <label for="pepEmail">Adrdress</label>
-                        <div class="ada5V"><input aria-required="false" value="3" readonly id="pepEmail" type="text" class="input"
-                                value=""></div>
-                    </div>
-                    <div class="eE-OA">
-                        <label for="Mobail Number">Mobail Number</label>
-                        <div class="ada5V"><input aria-required="false" value="4" readonly id="pepPhone Number" type="text" class="input"
-                                value=""></div>
-                    </div>
+                    <label for="pepEmail">Adrdress</label>
+                    <div class="ada5V"><input aria-required="false" value="3" readonly id="pepEmail" type="text"
+                            class="input" value=""></div>
+                </div>
+                <div class="eE-OA">
+                    <label for="Mobail Number">Mobail Number</label>
+                    <div class="ada5V"><input aria-required="false" value="4" readonly id="pepPhone Number" type="text"
+                            class="input" value=""></div>
+                </div>
 
-    
+
             </form>
 
-           <a href="./chang password/Login.html"><button class="button button2" type="button">Change password</button></a>
-           <button class="button button2" type="button" onclick="save()" id="save_btn">Save</button>
-           <button class="button button2" type="button" onclick="cancle()" id="cancle_btn">cancle</button>
+            <a href="./chang password/Login.html"><button class="button button2" type="button">Change
+                    password</button></a>
+            <button class="button button2" type="button" onclick="save()" id="save_btn">Save</button>
+            <button class="button button2" type="button" onclick="cancle()" id="cancle_btn">cancle</button>
         </div>
     </figure>
+
+    <!-- ===================================== Footer ======================================= -->
+    <footer class="footer">
+        <div class="footer-content"> All rights reserved. 2019</div>
+    </footer>
 </body>
-<script src="trainee.js"></script>
+<script src="./js/trainee.js"></script>
 
 </html>
