--- a/about_course.html
+++ b/about_course.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./style.CSS">
+    <link rel="stylesheet" href="./css/style.css">
     <title>NGO Courses</title>
 </head>
 
 <body>
     <nav>
-        <span class="menu-show" onclick="toggleMenu()">&#9776</span>
+        <span class="menu-show" id="showMenu">&#9776</span>
         <div class="menu-list" id="menu-list">
             <ul>
                 <li><a href="./index.html" class="active"> home </a></li>
@@ -33,13 +33,6 @@
             </div>
             <div class="logout"><a href="./register.html"> logout </a></div>
         </div>
-        <!-- ============================= -->
-        <div class="searchBox">
-            <input class="searchInput" type="text" name="" placeholder="Search">
-            <button class="searchButton" href="#">
-                <img src="./images/search-24px.svg">
-            </button>
-        </div>
     </nav>
     <header id="headTitle">
         <span class="title">HTML Course</span>
@@ -54,9 +47,9 @@
                 <li>Almafraq - Zaatari Camp</li>
                 <li>Remaining Seats</li>
             </ul> -->
-        </div> 
+        </div>
         <div class="about" id="aboutCourse">
-           <!-- <h2 class="bio">Category</h2>
+            <!-- <h2 class="bio">Category</h2>
             <h4 class="bio">Web Developer</h4>
             <hr>
             <p>
@@ -81,11 +74,12 @@
     </figure>
     <!-- =================================== footer =============================================== -->
 
-    <footer>
-        <div> All rights reserved. 2019</div>
+    <footer class="footer">
+        <div class="footer-content"> All rights reserved. 2019</div>
     </footer>
     <!-- =================================== script =============================================== -->
-    <script src="./courseAbout.js" type="module"></script>
+    <script src="./js/main.js"></script>
+    <script src="./js/courseAbout.js" type="module"></script>
 </body>
 
 </html>
