--- a/trainer.html
+++ b/trainer.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./style.CSS">
-    <title>Trainer</title>
+    <link rel="stylesheet" href="./css/style.CSS">
+    <title>T R A I N E R</title>
 </head>
 
 <body>
     <nav>
-        <span class="menu-show" onclick="toggleMenu()">&#9776</span>
+        <span class="menu-show" id="showMenu">&#9776</span>
         <div class="menu-list" id="menu-list">
             <ul>
                 <li><a href="./index.html" class="active"> home </a></li>
                 <li><a href="./trainee-profile.html"> profile </a></li>
-                <li><a href="./signup/index.html"> Sign up </a></li>
+                <li><a href="./singnup/index.html"> Sign up </a></li>
                 <li><a href="./login/index.html"> login </a></li>
                 <li><a href="./login/index.html"> logout </a></li>
             </ul>
@@ -34,13 +34,13 @@
             <div class="logout"><a href="./login/index.html"> logout </a></div>
         </div>
         <!-- ============================= -->
-        <div class="searchBox">
+        <!-- <div class="searchBox">
             <input class="searchInput" type="text" name="" placeholder="Search">
-            <button class="searchButton" href="#">
+            <button class="searchButton" href="#" id="searchButton">
                 <img src="./images/search-24px.svg">
             </button>
-        </div>
-</nav>
+        </div> -->
+    </nav>
     <header>
         <span class="title">Trainer Name</span>
     </header>
@@ -51,7 +51,7 @@
                 <li>Phone NO</li>
                 <li>Address</li>
                 <li>Email</li>
-        </ul>
+            </ul>
         </div>
         <div class="about">
             <span class="bio">BIO</span>
@@ -63,13 +63,12 @@
                 sunt non officia ex.</p>
         </div>
     </figure>
-     <!-- =================================== footer =============================================== -->
-    
-     <footer>
-        <div> All rights reserved. 2019</div>
+    <!-- =================================== footer =============================================== -->
+    <footer class="footer">
+        <div class="footer-content"> All rights reserved. 2019</div>
     </footer>
     <!-- =================================== script =============================================== -->
-    <script src="./main.js"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
