--- a/login.html
+++ b/login.html
@@ -17,16 +17,14 @@
             </ul>
         </div>
         <!-- ================== -->
-        <div class="list">
-            <ul>
+        <div class="list" id="list">
+            <!-- <ul>
                 <li><a href="./index.html" class="active"> home </a></li>
-                <!-- <li><a href="./trainee-profile.html"> profile </a></li> -->
             </ul>
             <div class="regLogin" id="regLogin">
                 <a href="./register.html"> Sign up </a>
-                <!-- <a href="./login.html"> login </a> -->
             </div>
-            <div class="logout" id="logout"><a href="./login.html"> logout </a></div>
+            <div class="logout" id="logout"><a href="./login.html"> logout </a></div> -->
         </div>
     </nav>
     <!-- =============================================================================================== -->
@@ -58,6 +56,8 @@
     <footer class="footer">
         <div class="footer-content"> All rights reserved. 2019</div>
     </footer>
+    <!-- ======================= Script ====================== -->
+    <!-- <script src="./js/main.js" type="module"></script> -->
+    <script src="./js/login.js" type="module"></script>
 </body>
-<script src="./js/login.js" type="module"></script>
 </html>
