--- a/passChange.html
+++ b/passChange.html
@@ -17,16 +17,11 @@
             </ul>
         </div>
         <!-- ================== -->
-        <div class="list">
-            <ul>
+        <div class="list" id="list">
+            <!-- <ul>
                 <li><a href="./index.html" class="active"> home </a></li>
-                <!-- <li><a href="./trainee-profile.html"> profile </a></li> -->
             </ul>
-            <!-- <div class="regLogin">
-                <a href="./register.html"> Sign up </a>
-                <a href="./login.html"> login </a>
-            </div> -->
-            <div class="logout"><a href="./login/index.html"> logout </a></div>
+            <div class="logout"><a href="./login/index.html"> logout </a></div> -->
         </div>
     </nav>
     <!-- ==================================== -->
@@ -47,7 +42,7 @@
                 <input type="password" placeholder="Password" id="password" />
                 <i class="fas fa-check-circle"></i>
                 <i class="fas fa-exclamation-circle"></i>
-                <img src="./images/visibility_off.svg" alt="" id="show-hide" onclick="togglePass()">
+                <img src="./images/visibility_off.svg" alt="" id="show-hide" >
                 <small>Error message</small>
             </div>
             <div class="form-control">
@@ -82,5 +77,5 @@
     //   }
     // }
 </script>
-<script src="./js/passChange.js"></script>
+<script src="./js/passChange.js" type="module"></script>
 </html>
