--- a/register.html
+++ b/register.html
@@ -17,16 +17,13 @@
             </ul>
         </div>
         <!-- ================== -->
-        <div class="list">
-            <ul>
+        <div class="list" id="list">
+            <!-- <ul>
                 <li><a href="./index.html" class="active"> home </a></li>
-                <!-- <li><a href="./trainee-profile.html"> profile </a></li> -->
             </ul>
             <div class="regLogin">
-                <!-- <a href="./signup.html"> Sign up </a> | -->
                 <a href="./login.html"> login </a>
-            </div>
-            <!-- <div class="logout"><a href="./login/index.html"> logout </a></div> -->
+            </div> -->
         </div>
     </nav>
     <div class="container">
@@ -58,7 +55,7 @@
             <div class="form-control">
                 <!-- <label for="username">Password</label> -->
                 <input type="password" placeholder="Password" id="password"/>
-                <img src="./images/visibility_off.svg" alt="" id="show-hide" onclick="togglePass()">
+                <img src="./images/visibility_off.svg" alt="" id="show-hide">
                 <small>Error message</small>
             </div>
             <div class="form-control">
@@ -73,7 +70,7 @@
 <footer class="footer">
     <div class="footer-content"> All rights reserved. 2019</div>
 </footer>
-
+<!-- ==================== Script ===================== -->
+<script src="./js/register.js" type="module"></script>
 </body>
-<script src="./js/register.js"></script>
 </html>
