--- a/search result.html
+++ b/search result.html
@@ -25,7 +25,7 @@
             </div>
             <!-- ================== -->
             <div class="list">
-                <ul>
+                <!-- <ul>
                     <li><a href="./index.html" class="active"> home </a></li>
                     <li><a href="./trainee-profile.html"> profile </a></li>
                 </ul>
@@ -33,7 +33,7 @@
                     <a href="./signup.html"> Sign up </a> |
                     <a href="./login.html"> login </a>
                 </div>
-                <div class="logout"><a href="./register.html"> logout </a></div>
+                <div class="logout"><a href="./register.html"> logout </a></div> -->
             </div>
             <!-- ============================= -->
             <div class="searchBox">
