--- a/signup.html
+++ b/signup.html
@@ -23,16 +23,15 @@
             </ul>
         </div>
         <!-- ============================= List Menu ============================= -->
-        <div class="list">
-            <ul>
+        <div class="list" id="list">
+            <!-- <ul>
                 <li><a href="./index.html" class="active"> home </a></li>
                 <li><a href="./trainee-profile.html"> profile </a></li>
             </ul>
             <div class="regLogin">
-                <!-- <a href="./signup.html"> Sign up </a> | -->
                 <a href="./login.html"> login </a>
             </div>
-            <div class="logout"><a href="./register.html"> logout </a></div>
+            <div class="logout"><a href="./register.html"> logout </a></div> -->
         </div>
         <!-- ============================= searchBox ============================= -->
         <div class="searchBox">
@@ -102,7 +101,7 @@
             <div class="footer-content"> All rights reserved. 2019</div>
         </footer>
     <!-- =================================== script =============================================== -->
-    <script src="./js/main.js"></script>
+    <script src="./js/main.js" type="module"></script>
 </body>
 
 </html>
