--- a/about_course.html
+++ b/about_course.html
@@ -22,8 +22,8 @@
             </ul>
         </div>
         <!-- ================== -->
-        <div class="list">
-            <ul>
+        <div class="list" id="list">
+            <!-- <ul>
                 <li><a href="./index.html" class="active"> home </a></li>
                 <li><a href="./trainee-profile.html"> profile </a></li>
             </ul>
@@ -31,7 +31,7 @@
                 <a href="./signup.html"> Sign up </a> |
                 <a href="./login.html"> login </a>
             </div>
-            <div class="logout"><a href="./register.html"> logout </a></div>
+            <div class="logout"><a href="./register.html"> logout </a></div> -->
         </div>
     </nav>
     <header id="headTitle">
@@ -78,7 +78,7 @@
         <div class="footer-content"> All rights reserved. 2019</div>
     </footer>
     <!-- =================================== script =============================================== -->
-    <script src="./js/main.js"></script>
+    <script src="./js/main.js" type="module"></script>
     <script src="./js/courseAbout.js" type="module"></script>
 </body>
 
