--- a/trainee-profile.html
+++ b/trainee-profile.html
@@ -13,7 +13,7 @@
 <body>
     <nav>
         <div class="container">
-        
+
             <span class="menu-show" id="showMenu">&#9776</span>
             <div class="menu-list" id="menu-list">
                 <ul>
@@ -25,8 +25,8 @@
                 </ul>
             </div>
             <!-- ================== -->
-            <div class="list">
-                <ul>
+            <div class="list" id="list">
+                <!-- <ul>
                     <li><a href="./index.html" class="active"> home </a></li>
                     <li><a href="./trainee-profile.html"> profile </a></li>
                 </ul>
@@ -34,7 +34,7 @@
                     <a href="./signup.html"> Sign up </a> |
                     <a href="./login.html"> login </a>
                 </div>
-                <div class="logout"><a href="./index.html"> logout </a></div>
+                <div class="logout"><a href="./index.html"> logout </a></div> -->
             </div>
         </div>
     </nav>
@@ -47,7 +47,7 @@
         <div class="image" id="profilePhoto"> </div>
         <div class="content">
             <br>
-            <img src="./images/iconfinder_edit.png" class="editicon" id="editIcon" >
+            <img src="./images/iconfinder_edit.png" class="editicon" id="editIcon">
             <form class="kWXsT" method="POST" id="profileContent">
                 <!-- <div class="eE-OA">
                    <label for="pepName">Full name </label>
@@ -71,15 +71,15 @@
                     </div> -->
             </form>
 
-           <a href="./passChange.html"><button class="button button2" type="button">Change password</button></a>
-           <button class="button button2" type="button"  id="save_btn">Save</button>
-           <button class="button button2" type="button"  id="cancel_btn">cancel</button>
+            <button class="button button2"><a href="./passChange.html">Change password</a></button>
+            <button class="button button2" id="save_btn">Save</button>
+            <button class="button button2" id="cancel_btn">Cancel</button>
         </div>
     </figure>
     <!-- =======================================Footer ================================ -->
-<footer class="footer">
-    <div class="footer-content"> All rights reserved. 2019</div>
-</footer>
+    <footer class="footer">
+        <div class="footer-content"> All rights reserved. 2019</div>
+    </footer>
 </body>
 <script src="./js/trainee.js" type="module"></script>
 
