--- a/register.html
+++ b/register.html
@@ -30,7 +30,7 @@
         <div class="header">
             <h2>Sign Up</h2>
         </div>
-        <form id="form" class="form">
+        <div id="form" class="form">
             <div class="form-control">
                 <!-- <label for="username">Full name</label> -->
                 <input type="text" placeholder="Full name" id="username" />
@@ -63,8 +63,8 @@
                 <input type="password" placeholder="Confirm Password" id="password2"/>
                 <small>Error message</small>
             </div>
-            <button type="submit" >Register</button>
-        </form>
+            <button  id="register">Register</button>
+        </div>
     </div>
 <!-- =======================================Footer ================================ -->
 <footer class="footer">
