--- a/Front_End_Courses.html
+++ b/Front_End_Courses.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/Front_End_Courses.css">
     <title>CHAMS </title>
 </head>
 
@@ -17,9 +17,8 @@
             <div class="menu-list" id="menu-list">
                 <ul>
                     <li><a href="./index.html" class="active"> home </a></li>
-                    <li><a href="./trainee-profile.html"> profile </a></li>
-                    <li><a href="./register.html"> Sign up </a></li>
-                    <li><a href="./login.html"> login </a></li>
+                    <li><a href="./Front_End_Courses.html" class="active"> My Courses </a></li>
+                    <li><a href="./trainee-profile.html" class="active"> profile </a></li>
                     <li><a href="./index.html"> logout </a></li>
                 </ul>
             </div>
@@ -74,8 +73,7 @@
     </footer>
 
     <!-- =================================== script =============================================== -->
-    <script src="./js/main.js" type="module"></script>
-    <script src="./js/import.js" type="module"></script>
+    <script src="./js/Front_End_Courses.js" type="module"></script>
 </body>
 
 </html>
