--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <li><a href="./trainee-profile.html"> profile </a></li>
                     <li><a href="./register.html"> Sign up </a></li>
                     <li><a href="./login.html"> login </a></li>
-                    <li><a href="./index.html"> logout </a></li>
+                    <li><a id="logout" href="./index.html"> logout </a></li>
                 </ul>
             </div>
             <!-- ================== -->
