--- a/trainee-profile.html
+++ b/trainee-profile.html
@@ -21,7 +21,7 @@
                     <li><a href="./trainee-profile.html"> profile </a></li>
                     <li><a href="./signup.html"> Sign up </a></li>
                     <li><a href="./login.html"> login </a></li>
-                    <li><a href="./register.html"> logout </a></li>
+                    <li><a id="logout" href="./index.html"> logout </a></li>
                 </ul>
             </div>
             <!-- ================== -->
