--- a/about_course.html
+++ b/about_course.html
@@ -22,6 +22,8 @@
             </ul>
         </div>
         <!-- ================== -->
+        <input type="checkbox" id="check" style="display:none;">
+
         <div class="list" id="list">
             <!-- <ul>
                 <li><a href="./index.html" class="active"> home </a></li>
@@ -39,37 +41,10 @@
     </header>
     <figure>
         <div class="profile_pic" id="pagePhoto">
-            <!-- <div class="picture"><a href="./NGO info.html"><img src="./images/chamsLogo.jpg" alt="HTML"title="HTML"></a>
-            </div>
-            <ul class="ul">
-                <li>HTML Course</li>
-                <li>1.1.2020 - 1.5.2020</li>
-                <li>Almafraq - Zaatari Camp</li>
-                <li>Remaining Seats</li>
-            </ul> -->
+        
         </div>
         <div class="about" id="aboutCourse">
-            <!-- <h2 class="bio">Category</h2>
-            <h4 class="bio">Web Developer</h4>
-            <hr>
-            <p>
-                Hypertext Markup Language (HTML) is the standard markup language for documents designed to be displayed
-                in a web browser. It can be assisted by technologies such as Cascading Style Sheets (CSS) and scripting
-                languages such as JavaScript.<br>Web browsers receive HTML documents from a web server or from local
-                storage and render the documents into multimedia web pages. HTML describes the structure of a web page
-                semantically and originally included cues for the appearance of the document.<br>HTML elements are the
-                building blocks of HTML pages. With HTML constructs, images and other objects such as interactive forms
-                may be embedded into the rendered page. HTML provides a means to create structured documents by denoting
-                structural semantics for text such as headings, paragraphs, lists, links, quotes and other items. HTML
-                elements are delineated by tags, written using angle brackets.<br>Tags such as < img> and < input>
-                directly introduce content into the page. Other tags such as < p> surround and provide
-                information about document text and may include other tags as sub-elements. Browsers do not
-                display the HTML tags, but use them to interpret the content of the page.<br>HTML can embed
-                programs written in a scripting language such as JavaScript, which affects the behavior and
-                content of web pages. Inclusion of CSS defines the look and layout of content. The World
-                Wide Web Consortium (W3C), former maintainer of the HTML and current maintainer of the CSS
-                standards, has encouraged the use of CSS over explicit presentational HTML since 1997.
-            </p> -->
+         
         </div>
     </figure>
     <!-- =================================== footer =============================================== -->
