--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
             <div class="menu-list" id="menu-list">
                 <ul>
                     <li><a href="./index.html" class="active"> home </a></li>
-                    <li><a href="./trainee-profile.html"> profile </a></li>
+                    <!-- <li><a href="./trainee-profile.html"> profile </a></li> -->
                     <li><a href="./register.html"> Sign up </a></li>
                     <li><a href="./login.html"> login </a></li>
-                    <li><a id="logout" href="./index.html"> logout </a></li>
+                    <!-- <li><a id="logout" href="./index.html"> logout </a></li> -->
                 </ul>
             </div>
             <!-- ================== -->
@@ -29,7 +29,7 @@
             <!-- ============================= -->
             <div class="searchBox">
                 <input class="searchInput" type="text" name="" id="searchInput" placeholder="Search">
-                <button class="searchButton" href="#" id="searchButton" onclick="searchBox()">
+                <button class="searchButton" href="#" id="searchButton">
                     <img src="./images/search-24px.svg">
                 </button>
             </div>
