--- a/passChange.html
+++ b/passChange.html
@@ -52,7 +52,7 @@
                 <i class="fas fa-exclamation-circle"></i>
                 <small>Error message</small>
             </div>
-            <button type="submit" id="submit">save</button>
+            <button id="save">save</button>
 
         </form>
     </div>
