--- a/Front_End_Courses.html
+++ b/Front_End_Courses.html
@@ -17,8 +17,9 @@
             <div class="menu-list" id="menu-list">
                 <ul>
                     <li><a href="./index.html" class="active"> home </a></li>
-                    <li><a href="./Front_End_Courses.html" class="active"> My Courses </a></li>
-                    <li><a href="./trainee-profile.html" class="active"> profile </a></li>
+                    <li><a href="./trainee-profile.html"> profile </a></li>
+                    <li><a href="./register.html"> Sign up </a></li>
+                    <li><a href="./login.html"> login </a></li>
                     <li><a href="./index.html"> logout </a></li>
                 </ul>
             </div>
